# readDocAnalytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  errors.py  main.py
app/analysis/: __init__.py  factory.py  gemini_rag.py  local.py  models.py
app/auth/: __init__.py  oauth.py  session_store.py
app/docs_reader/: __init__.py  google_docs.py  models.py
app/jobs/: __init__.py  models.py  store.py
app/rag/: __init__.py  client.py
app/reports/: __init__.py  docx_exporter.py  presenter.py
app/static/: styles.css
app/templates/: base.html  index.html  loading.html  result.html
app/web/: __init__.py  routes.py
docs/: plano-desenvolvimento-implementacao.md
tests/: test_app.py  test_docx_exporter.py  test_gemini_rag.py  test_google_docs.py  test_jobs.py  test_local_analyzer.py  test_oauth.py  test_rag_client.py
