[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "read-doc-analytics"
version = "0.1.0"
description = "Prototype that reviews AI project proposals from private Google Docs using GCP RAG Engine and Gemini."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.20",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "itsdangerous>=2.2.0",
  "google-api-python-client>=2.176.0",
  "google-auth>=2.40.0",
  "google-auth-oauthlib>=1.2.2",
  "google-cloud-aiplatform>=1.160.0",
  "google-genai>=1.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css"]
